# voidstar

./: .appveyor.yml  .bazelrc  .dockerignore  .gitignore  .travis.yml  BNT162b2.go  BUILD  CMakeLists.txt  Dockerfile  Dockerfile.dev  LICENSE  LOCKFILE.bzl  Makefile  README.md  WORKSPACE  _HILBER_erlang_gist.md  circle.yml  conanfile.txt  configure  configure.sh  contained.sh  dockcross  docker-dev.sh  docker.sh  fragment.glsl  math_3d.h  miners.c  miners.cc  pi.glsl  pixels.c  points.c  resolved.bzl  shaders.cc  travis-miners.enc  variables.bzl  xvfb.sh
.github/workflows/: snap.yml  snapcraft.yml  workflow.yml
cmake/cpack/: CMakeLists.txt
cmake/in/: Doxyfile.in.cmake
cmake/modules/: ccache.cmake  doxygen.cmake  sanitizers.cmake  static_analysis.cmake  uninstall.cmake
data/: rgb555.xraw
hacking/: BUILD  argh.cc  elem.cc  sample.cc  tri.cc
old/: Makefile  betterpoints.cc  draw.c  miners.cc  pixels.c  point.cc  point.h  points.c  shaders.hh  vertex.glsl
opens/source/04_camera/resources/: fragment-shader.txt  vertex-shader.txt
opens/source/04_camera/source/: main.cpp
snap/: snapcraft.yaml  snapcraft.yml
snap/gui/: voidstar.desktop
source/miners/resources/: fragment.glsl
source/miners/source/: Arguments.cc  GlfwManager.cc  GlfwManager.hh  Scene.cc
src/: Algo2DEntropy.cc  Algo2DFourColors.cc  Algo2DGrayscale.cc  Algo3DCubeContiBnW.cc  Algo3DCubeContiFrebet.cc  Algo3DCubeContiRainbow.cc  Algo3DCubeEntropy.cc  Algo3DCubeFull.cc  Algo3DSphereContiBnW.cc  Algo3DSphereContiFrebet.cc  Algo3DSphereContiRainbow.cc  Algo3DSphereFull.cc  Algorithm.cc  Arguments.cc  BUILD  FdFileLoader.cc  FdLoader.cc  FileLoader.cc  GlfwManager.cc  Loader.cc  Manager.cc  MmapFileLoader.cc  MmapLoader.cc  Scene.cc  Scene2D.cc  Scene3D.cc  main.cc  main_ply.cc
src/common/: platform.hpp
src/common/platform/: platform.cc
src/common/tdogl/: Bitmap.cpp  Camera.h  Program.h
src/common/tinyply/: tinyply.cpp  tinyply.h
src/include/: Algo2D.h  Algo2D.hh  Algo2DEntropy.h  Algo2DEntropy.hh  Algo2DFourColors.h  Algo2DFourColors.hh  Algo2DGrayscale.h  Algo2DGrayscale.hh  Algo3D.h  Algo3D.hh  Algo3DCube.h  Algo3DCube.hh  Algo3DCubeContiBnW.h  Algo3DCubeContiBnW.hh  Algo3DCubeContiFrebet.h  Algo3DCubeContiFrebet.hh  Algo3DCubeContiRainbow.h  Algo3DCubeContiRainbow.hh  Algo3DCubeEntropy.hh  Algo3DCubeFull.h  Algo3DCubeFull.hh  Algo3DCylinder.hh  Algo3DSphere.h  Algo3DSphere.hh  Algo3DSphereContiBnW.h  Algo3DSphereContiBnW.hh  Algo3DSphereContiFrebet.h  Algo3DSphereContiFrebet.hh  Algo3DSphereContiRainbow.h  Algo3DSphereContiRainbow.hh  Algo3DSphereFull.h  Algo3DSphereFull.hh  Algorithm.h  Algorithm.hh  Algorithm2D.hh  Algorithm2DFourColors.hh  Algorithm2DGrayscale.hh  Algorithm3D.hh  Algorithm3DContiBnW.hh  Algorithm3DContiFrebet.hh  (+36 more)
src/miners/: Algo2DEntropy.cc  Algo2DFourColors.cc  Algo2DGrayscale.cc  Algo3DCubeContiBnW.cc  Algo3DCubeContiFrebet.cc  Algo3DCubeContiRainbow.cc  Algo3DCubeEntropy.cc  Algo3DSphereContiBnW.cc  Algo3DSphereContiFrebet.cc  Algorithm.cc  Algorithm2DFourColors.cc  Algorithm2DGrayscale.cc  Algorithm3DContiBnW.cc  Algorithm3DContiFrebet.cc  Algorithm3DContiRainbow.cc  Arguments.cc  ContiAlgorithm.cc  ContiAlgorithm3D.cc  FileLoader.cc  GlfwManager.cc  Loader.cc  Manager.cc  MmapLoader.cc  Scene.cc  Scene2D.cc  Scene3D.cc  main.cc
src/miners/resources/: vertex.glsl
src/resources/: CMakeLists.txt  fragment.glsl  pack_GLSLs.sh  shaders.h  vertex_2d.glsl  vertex_3d.glsl
src/shaders/: glsl2h.sh
tmp/opens/source/04_camera/resources/: fragment.glsl  vertex.glsl
tmp/opens/source/04_camera/source/: Arguments.hh  Events.hh  Manager.hh  Scene.cc  Scene.hh  main.cpp
voidstar/: BUILD  algorithm.cc  algorithm.h  argh.cc  arguments.cc  arguments.h  data_range.h  elem.cc  flags.h  glfwSample.cc  hello_triangle.cc  indices.h  main.cc  registrar.h  sample.cc  simple.cc  size2str.cc  size2str.h  tri.cc  types.h
voidstar/algos_2d/: 4col.cc  BUILD  algo_2d.h  entropy.cc  gray.cc
voidstar/algos_3d/: BUILD  algo_3d.h  cube.h  cube_conti_bnw.cc  cube_conti_bnw.h  cube_conti_frebet.cc  cube_conti_rainbow.cc  cube_conti_rainbow.h  cube_full.cc  sphere.h  sphere_conti_bnw.cc  sphere_conti_frebet.cc  sphere_conti_rainbow.cc  sphere_full.cc  sphere_full.h
voidstar/loaders/: BUILD  fd.cc  file.cc  file.h  loader.cc  loader.h  mmap.cc
voidstar/managers/: BUILD  events.h  glfw3.cc  glfw3.h  manager.cc  manager.h
voidstar/scenes/: 2d.cc  3d.cc  BUILD  scene.cc  scene.h
voidstar/shaders/: BUILD  fragment.glsl  glsl2h.sh  vertex_2d.glsl
